EDG.LoyaltyGames/EDG.LoyaltyGames.APIS/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: games-loadbalancer-service
  namespace: games
spec:
  selector:
    app.kubernetes.io/name: games-test-app-test
  ports:
    - name: games-test-app-port-test
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
