EDG.LoyaltyGames/EDG.LoyaltyGames.APIS/Ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  namespace: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: games-loadbalancer-service
                port:
                  number: 80
            path: /
