EDG.LoyaltyGames/EDG.LoyaltyGames.APIS/Test_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-app-deployment-test
  namespace: nginx-ingress
  annotations:
    kubernetes.io/change-cuase: "Initional deployment of the app -test"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: games-test-app-test
  template:
    metadata:
      name: loyaltygamesk8s-test
      labels:
        env: prod
        app: games-test-app-test
        app.kubernetes.io/name: games-test-app-test
    spec:      
      containers:
        - name: games-test-app-test
          image: loyaltygameregistry.azurecr.io/edgloyaltygamesapis:280723
          imagePullPolicy: Always        
          ports:
            - containerPort: 80
              name: http-web-api
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: games-loadbalancer-service
  namespace: nginx-ingress
spec:
  selector:
    app.kubernetes.io/name: games-test-app-test
  ports:
    - name: games-test-app-port-test
      protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: www.example.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: games-loadbalancer-service
                port:
                  number: 80
            path: /
