EDG.LoyaltyGames/EDG.LoyaltyGames.APIS/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-app-deployment
  namespace: nginx-ingress
  annotations:
    kubernetes.io/change-cuase: "Initional deployment of the app"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: games-test-app
  template:
    metadata:
      name: loyaltygamesk8s
      labels:
        env: prod
        app: games-test-app
        app.kubernetes.io/name: games-test-app
    spec:      
      containers:
        - name: games-test-app
          image: loyaltygameregistry.azurecr.io/edgloyaltygamesapis:280723
          imagePullPolicy: Always        
          ports:
            - containerPort: 80
              name: http-web-api
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: games-lb-service
  namespace: nginx-ingress
spec:
  selector:
    app.kubernetes.io/name: games-test-app
  ports:
    - name: games-test-app-port
      protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
---
# Create ingress controller
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: game-ingress
  name: game-ingress
  namespace: nginx-ingress
spec:
  rules:
    - http:
        paths:
          - path: /games
            pathType: Prefix
            backend:
              service:
                name: games-lb-service
                port: 
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: games-loadbalancer-service
  namespace: nginx-ingress
spec:
  selector:
    app.kubernetes.io/name: games-test-app
  ports:
    - name: games-test-app-port
      protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
